# sharded-storage

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.example.yml  nodes.yml
client/: Cargo.toml  README.md
client/benches/: throughput.rs
client/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: config.rs  contract.rs  crypto.rs  encode.rs  lib.rs  node.rs
contract-mock/: Cargo.toml  Dockerfile
contract-mock/src/: main.rs
locust/: bench-all-nodes.sh  locustfile.py
locust/reports/: node0_stats.csv  node0_stats_history.csv  node10_stats.csv  node10_stats_history.csv  node11_stats.csv  node11_stats_history.csv  node12_stats.csv  node12_stats_history.csv  node13_stats.csv  node13_stats_history.csv  node14_stats.csv  node14_stats_history.csv  node15_stats.csv  node15_stats_history.csv  node1_stats.csv  node1_stats_history.csv  node2_stats.csv  node2_stats_history.csv  node3_stats.csv  node3_stats_history.csv  node4_stats.csv  node4_stats_history.csv  node5_stats.csv  node5_stats_history.csv  node6_stats.csv  node6_stats_history.csv  node7_stats.csv  node7_stats_history.csv  node8_stats.csv  node8_stats_history.csv  node9_stats.csv  node9_stats_history.csv
m31jubjub/: Cargo.toml  README.md
m31jubjub/sage/: find_curve_run.sh
m31jubjub/src/: eddsa.rs  flatten.rs  hdwallet.rs  lib.rs
m31jubjub/src/m31/: mod.rs  types.rs
node/: Cargo.toml  Dockerfile
node/src/: api.rs  main.rs  network.rs  state.rs  storage.rs
primitives/: Cargo.toml
primitives/benches/: poseidon2.rs
primitives/examples/: gen_seedboxes.rs  tool.rs
primitives/src/: config.rs  consts.rs  lib.rs  tools.rs  utils.rs
sage/: find_curve.sage  found_curve_output.txt  m31jubjub_test.sage  verify_curve.sage
sage/sharding/: main.sage
scripts/: download.sh  run-contract-mock.sh  run-nodes.sh  run-validator.sh  upload.sh
sealing/: Cargo.toml
sealing/examples/: gen_sealing_state.rs
sealing/src/: lib.rs
sharding/: Cargo.toml
sharding/src/: lib.rs  symmetric_cfft.rs  util.rs
shards/: Cargo.toml
shards/src/: commit.rs  lib.rs
snapshotdb/: Cargo.toml
snapshotdb/examples/: benchmark_read_write.rs  benchmark_write.rs  complex_snapshot_test.rs  create_db.rs
snapshotdb/src/: allocator.rs  db.rs  lib.rs  sledwrapper.rs  utils.rs
spora/: Cargo.toml
spora/src/: lib.rs  prover.rs  rlc.rs  spora.rs  storage.rs  types.rs  verifier.rs
src/: curve.rs  eddsa.rs  flatten.rs  lib.rs
src/m31/: consts.rs  engine.rs  fs.rs  mod.rs
tests/: Cargo.toml  upload_download.rs
validator/: Cargo.toml  Dockerfile
validator/src/: api.rs  config.rs  main.rs  network.rs  state.rs
