[workspace]
resolver = "2"
members = [ "primitives", "sealing","shards"
, "spora", "storage"]


[workspace.dependencies]
p3-circle = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-challenger = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-commit = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-dft = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-field = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-fri = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-matrix = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-maybe-rayon = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-util = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-mersenne-31 = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-merkle-tree = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-symmetric = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-poseidon2 = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}
p3-uni-stark = {git = "https://github.com/zeropoolnetwork/Plonky3", branch = "fork/feature/cfft-symmetric-compatibility"}



rand_core = "0.6.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
itertools = "0.13.0"
libc-print = "0.1.22"
sha3 = "0.10"
