[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
color-eyre = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "json"] }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
bincode = { workspace = true }
m31jubjub = { workspace = true }
rand = { workspace = true }
p3-matrix = { workspace = true }

primitives = { path = "../primitives" }
common = { path = "../common" }
shards = { path = "../shards" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
futures = "0.3.31"

[[bench]]
name = "throughput"
harness = false