[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-mersenne-31 = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-field = { workspace = true }
serde = { workspace = true }
m31jubjub = { workspace = true }

primitives = { path = "../primitives" }
