[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-mersenne-31 = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-field = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
m31jubjub = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "json"] }
color-eyre = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
hex = { workspace = true, features = ["serde"] }
static_assertions = "1.1.0"
ark-serialize = "0.4.2"
serde_with = "3.11.0"

primitives = { path = "../primitives" }
