[package]
name = "zeropool-sharded-storage-contract-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
color-eyre = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }

zeropool-sharded-storage-common = { path = "../common" }
primitives = { path = "../primitives" }