[package]
name = "contract-mock"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["macros"] }
color-eyre = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
bincode = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }

common = { path = "../common" }
primitives = { path = "../primitives" }