[package]
name = "m31jubjub"
version = "0.1.0"
edition = "2021"

[dependencies]

p3-mersenne-31 = { workspace = true }
p3-field = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }

ark-ff = "0.4.2"
num-bigint = "0.4.6"
sha3 = "0.10.8"

hmac = "0.12"
sha2 = "0.10"
bip39 = "2.0"
base58 = "0.2"



bincode = { workspace = true, default-features = false }

[dev-dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
rand = "0.8.5"
libc-print = "0.1.22"