[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
libp2p = { workspace = true, features = ["tokio", "noise", "macros", "tcp", "yamux", "quic", "identify", "ping", "request-response", "cbor", "dns", "serde", "mdns"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

p3-mersenne-31 = { workspace = true }
p3-field = { workspace = true }
p3-poseidon2 = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
dotenv = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
bincode = { workspace = true }
m31jubjub = { workspace = true }
base64 = { workspace = true }
p3-matrix = { workspace = true }

common = { path = "../common" }
primitives = { path = "../primitives" }
snapshot-db = { path = "../snapshotdb" }
shards = { path = "../shards" }
