[package]
name = "primitives"
version = "0.1.0"
edition = "2021"

[dependencies]

p3-mersenne-31 = {workspace = true}
p3-symmetric = {workspace = true}
p3-poseidon2 = {workspace = true}
p3-merkle-tree = {workspace = true}
p3-field = {workspace = true}
p3-commit = {workspace = true}
p3-challenger = {workspace = true}
p3-uni-stark = {workspace = true}
p3-circle = {workspace = true}
p3-fri = {workspace = true}

[dev-dependencies]
rand = {workspace = true}
rand_chacha = {workspace = true}
sha3 = {workspace = true}

