[package]
name = "snapshot-db"
version = "0.1.0"
edition = "2021"

[dependencies]
flume = "0.11"
tokio = { version = "1", features = ["full"] }
sled = "0.34"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
hashbrown = "0.12"
libc = "0.2.65"

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"
fastrand = "2.2"

[profile.release]
debug = true