[package]
name = "spora"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-circle = {workspace = true}
p3-matrix = {workspace = true}
p3-mersenne-31 = {workspace = true}
p3-field = {workspace = true}

itertools = {workspace = true}
p3-maybe-rayon = {workspace = true}
p3-challenger = {workspace = true}
p3-util = {workspace = true}
libc-print = {workspace = true}

primitives = {path = "../primitives"}