[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
zeropool-sharded-storage-common = { path = "../common" }
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.127"

[[test]]
name = "upload_download"
path = "upload_download.rs"
