[package]
name = "validator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
color-eyre = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
libp2p = { workspace = true, features = ["tokio", "noise", "macros", "tcp", "yamux", "quic", "identify", "ping", "request-response", "cbor", "dns", "serde"] }
m31jubjub = { workspace = true }
clap = { workspace = true, features = ["derive"] }
bincode = { workspace = true }

shards = { path = "../shards" }
common = { path = "../common" }
primitives = { path = "../primitives" }
